--- a/public/index.html
+++ b/public/index.html
@@ -113,5 +113,5 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         
-        </body>
+        </body>git init
 </html>
