--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <meta name="csrf-token" content="{{ csrf_token() }}">
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
             href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
@@ -107,11 +108,18 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
-        <title>Dashboard: Flexy React Dashboard</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+        <title></title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        
-        </body>git init
+        <script src="https://localhost/plugins/pace-js/pace.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-zN/5oxYlY8pWoyJyKX6Uv1nA/CR9fH/j4PcjlLrRDI8COmI5bZqZScRDMUl+z59C" crossorigin="anonymous">
+    </script>
+           <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+           
+        </body>
 </html>
